--- a/style.css
+++ b/style.css
@@ -20,12 +20,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .logo {
     font-size: 24px;
     color: #f9faf8;
     font-weight: 900;
+    padding-bottom: 10px;
 }
 
 .upperhead ul {
@@ -40,6 +42,7 @@ body {
     justify-content: space-between;
     padding: 70px 0 70px 0;
     gap: 30px;
+
 }
 
 .awesome {
@@ -48,7 +51,7 @@ body {
     align-items: flex-start;
     justify-content: center;
     gap: 5px;
-    flex: 1 0 400px;
+    flex: 1 0 250px;
 }
 
 .awesome h1 {
@@ -77,7 +80,7 @@ body {
 
 .headimage {
     display: flex;
-    flex: 1 0 300px;
+    flex: 1 0 250px;
     justify-content: flex-end;
     align-items: center;
 }
